@@ -55,6 +55,7 @@ Changes:
 - Add auto IPv6 fot WebGUI.
 - Add AES-CBC at disk encryption.
 - Add TCP wrapper check in FTP service.
+- Add allow trusted domains for Active Directory in CIFS/SMB service.
 - Wait response of LAN interface if static with gateway.
 - Run umount before iSCSI initiator shutdown.
 - Remount all after netif is up for iSCSI device.
